// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toast API 1`] = `
.c3 > *:nth-child(2) .c1 {
  margin-top: 5px;
}

.c0 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c2 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c4 > .c1 {
  margin-top: 5px;
}

.c5 > .c1 {
  margin-top: 5px;
}

<Toast
  kind="primary"
>
  <styled-components__StyledCard
    kind="primary"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
              [Function],
              ";
  overflow: hidden;
",
              "
  border: 1px solid ",
              [Function],
              ";
  background-color: rgba(255, 255, 255, 0.9);
",
            ],
          },
          "displayName": "styled-components__StyledCard",
          "foldedComponentIds": Array [
            "Card-lighsv-0",
          ],
          "render": [Function],
          "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      kind="primary"
    >
      <div
        className="c0"
        kind="primary"
      >
        <styled-components__StyledP
          kind="primary"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    "
  margin: 0;
  font-size: ",
                    [Function],
                    ";

  ",
                    [Function],
                    ";
",
                    "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                    [Function],
                    ";
  background-color: ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "styled-components__StyledP",
                "foldedComponentIds": Array [
                  "c1",
                ],
                "propTypes": Object {
                  "color": [Function],
                },
                "render": [Function],
                "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                "target": "p",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="primary"
          >
            <p
              className="c1 c2"
              kind="primary"
            >
              Success! You have delete the item.
            </p>
          </StyledComponent>
        </styled-components__StyledP>
      </div>
    </StyledComponent>
  </styled-components__StyledCard>
</Toast>
`;

exports[`Storyshots Toast With kind props 1`] = `
.c12 > *:nth-child(2) .c2 {
  margin-top: 5px;
}

.c4 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c1 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #999A94;
  background-color: rgba(255,255,255,0.9);
}

.c6 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #69BE28;
  background-color: rgba(255,255,255,0.9);
}

.c8 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #F5364E;
  background-color: rgba(255,255,255,0.9);
}

.c10 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #F39A1E;
  background-color: rgba(255,255,255,0.9);
}

.c5 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c3 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #999A94;
  background-color: rgba(250,250,250,0.1);
}

.c7 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #69BE28;
  background-color: rgba(105,190,40,0.1);
}

.c9 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F5364E;
  background-color: rgba(245,54,78,0.1);
}

.c11 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F39A1E;
  background-color: rgba(243,154,30,0.1);
}

.c13 > .c2 {
  margin-top: 5px;
}

.c14 > .c2 {
  margin-top: 5px;
}

.c0 > * {
  margin-bottom: 16px;
}

<Toastexample__DemoWrapper>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Toastexample__DemoWrapper-sc-1ewmtuh-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "
  > * {
    margin-bottom: 16px;
  }
",
          ],
        },
        "displayName": "Toastexample__DemoWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Toastexample__DemoWrapper-sc-1ewmtuh-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <Toast
        key="default"
        kind="default"
      >
        <styled-components__StyledCard
          kind="default"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c10",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "foldedComponentIds": Array [
                  "Card-lighsv-0",
                ],
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="default"
          >
            <div
              className="c1"
              kind="default"
            >
              <styled-components__StyledP
                kind="default"
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c11",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "foldedComponentIds": Array [
                        "c2",
                      ],
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="default"
                >
                  <p
                    className="c2 c3"
                    kind="default"
                  >
                    default
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="primary"
        kind="primary"
      >
        <styled-components__StyledCard
          kind="primary"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c10",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "foldedComponentIds": Array [
                  "Card-lighsv-0",
                ],
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="primary"
          >
            <div
              className="c4"
              kind="primary"
            >
              <styled-components__StyledP
                kind="primary"
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c11",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "foldedComponentIds": Array [
                        "c2",
                      ],
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="primary"
                >
                  <p
                    className="c2 c5"
                    kind="primary"
                  >
                    primary
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="success"
        kind="success"
      >
        <styled-components__StyledCard
          kind="success"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c10",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "foldedComponentIds": Array [
                  "Card-lighsv-0",
                ],
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="success"
          >
            <div
              className="c6"
              kind="success"
            >
              <styled-components__StyledP
                kind="success"
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c11",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "foldedComponentIds": Array [
                        "c2",
                      ],
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="success"
                >
                  <p
                    className="c2 c7"
                    kind="success"
                  >
                    success
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="error"
        kind="error"
      >
        <styled-components__StyledCard
          kind="error"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c10",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "foldedComponentIds": Array [
                  "Card-lighsv-0",
                ],
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="error"
          >
            <div
              className="c8"
              kind="error"
            >
              <styled-components__StyledP
                kind="error"
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c11",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "foldedComponentIds": Array [
                        "c2",
                      ],
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="error"
                >
                  <p
                    className="c2 c9"
                    kind="error"
                  >
                    error
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
      <Toast
        key="warning"
        kind="warning"
      >
        <styled-components__StyledCard
          kind="warning"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                  "isStatic": false,
                  "lastClassName": "c10",
                  "rules": Array [
                    "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
                    [Function],
                    ";
  overflow: hidden;
",
                    "
  border: 1px solid ",
                    [Function],
                    ";
  background-color: rgba(255, 255, 255, 0.9);
",
                  ],
                },
                "displayName": "styled-components__StyledCard",
                "foldedComponentIds": Array [
                  "Card-lighsv-0",
                ],
                "render": [Function],
                "styledComponentId": "styled-components__StyledCard-sc-1kgwv0d-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            kind="warning"
          >
            <div
              className="c10"
              kind="warning"
            >
              <styled-components__StyledP
                kind="warning"
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__StyledP-sc-1kgwv0d-1",
                        "isStatic": false,
                        "lastClassName": "c11",
                        "rules": Array [
                          "
  margin: 0;
  font-size: ",
                          [Function],
                          ";

  ",
                          [Function],
                          ";
",
                          "
  display: flex;
  align-items: center;
  padding: 10px 20px;
  color: ",
                          [Function],
                          ";
  background-color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled-components__StyledP",
                      "foldedComponentIds": Array [
                        "c2",
                      ],
                      "propTypes": Object {
                        "color": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "styled-components__StyledP-sc-1kgwv0d-1",
                      "target": "p",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  kind="warning"
                >
                  <p
                    className="c2 c11"
                    kind="warning"
                  >
                    warning
                     - You have delete the item.
                  </p>
                </StyledComponent>
              </styled-components__StyledP>
            </div>
          </StyledComponent>
        </styled-components__StyledCard>
      </Toast>
    </div>
  </StyledComponent>
</Toastexample__DemoWrapper>
`;
